# Text-Chat

./: LICENSE  README.md  chaos.html  index.html  init.py  login.js  main.js  main.py  messages.db  messages.sqlite3  messages.txt  old.py  pyproject.toml
static/: main.js
templates/: index.html
