[tool.poetry]
name = "repl_python3_Text-Chat"
version = "0.1.0"
description = ""
authors = ["VincentC <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^10.1"
Flask = "^2.0.2"
Flask-SocketIO = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
